--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,17 @@
         android:theme="@style/Theme.LocationFinder"
         tools:targetApi="31">
         <activity
+            android:name=".NewLocation"
+            android:exported="false"
+            android:parentActivityName=".MainActivity"
+            />
+
+        <activity
+            android:name=".EditLocation"
+            android:exported="false"
+            android:parentActivityName=".MainActivity"
+            />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
